# py-cachify-fastapi-demo

./: GUIDE.md  README.md  pyproject.toml
app/: db.py  main.py
