[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Galtozzy <galtozzy+git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlmodel = "^0.0.22"
aiosqlite = "^0.20.0"
redis = "^5.2.0"
py-cachify = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
